--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "engines": {
+    "node": "20.15.1"
+  },
   "name": "yelpcamp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
